--- a/style.css
+++ b/style.css
@@ -1,95 +1,53 @@
-.ibm-plex-sans-thin {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 100;
-      font-style: normal;
-    }
-    
-    .ibm-plex-sans-extralight {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 200;
-      font-style: normal;
-    }
-    
-    .ibm-plex-sans-light {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 300;
-      font-style: normal;
-    }
-    
-    .ibm-plex-sans-regular {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-    }
-    
-    .ibm-plex-sans-medium {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 500;
-      font-style: normal;
-    }
-    
-    .ibm-plex-sans-semibold {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 600;
-      font-style: normal;
-    }
-    
-    .ibm-plex-sans-bold {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 700;
-      font-style: normal;
-    }
-    
-    .ibm-plex-sans-thin-italic {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 100;
-      font-style: italic;
-    }
-    
-    .ibm-plex-sans-extralight-italic {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 200;
-      font-style: italic;
-    }
-    
-    .ibm-plex-sans-light-italic {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 300;
-      font-style: italic;
-    }
-    
-    .ibm-plex-sans-regular-italic {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 400;
-      font-style: italic;
-    }
-    
-    .ibm-plex-sans-medium-italic {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 500;
-      font-style: italic;
-    }
-    
-    .ibm-plex-sans-semibold-italic {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 600;
-      font-style: italic;
-    }
-    
-    .ibm-plex-sans-bold-italic {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-weight: 700;
-      font-style: italic;
-    }
-    .charm-regular {
-      font-family: "Charm", cursive;
-      font-weight: 400;
-      font-style: normal;
-    }
-    
-    .charm-bold {
-      font-family: "Charm", cursive;
-      font-weight: 700;
-      font-style: normal;
-    }
-        
+body{
+  margin-top: 7%;
+  background-color: #004225;
+}
+
+body h3 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: white;
+}
+
+h1 {
+  font-family: "Charm", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 5rem;
+  color: #FFB000;
+}
+
+.passion{
+  display: flex;
+  width: fit-content;
+  justify-content: center;
+  padding: 10px;
+  border-left: solid 5px #FFB000;
+}
+
+.container.passion{
+  display: flex;
+  justify-content: center;
+  border-left: none;
+}
+
+#app-name{
+  background-color: #004225;
+}
+
+p{
+  color: white;
+  text-align: center;
+}
+
+.btn-primary{
+  background-color: #FFCF9D;
+  color: black;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 900;
+}
+
+.btn-primary:hover{
+  background-color: #FFB000;
+}
