--- a/style.css
+++ b/style.css
@@ -27,6 +27,14 @@ h1, h2 {
   color: #004225;
 }
 
+h6 {
+  font-family: "Charm", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2rem;
+  color: #004225;
+}
+
 h4, h5 {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
