Auto add default categories of income, expense and payment method. Added successful registration message

--- a/style.css
+++ b/style.css
@@ -197,6 +197,11 @@ p{
   background-color: #004225;
 }
 
+p.success{
+  color: #FFB000;
+  font-weight: bolder;
+}
+
 @media(max-width: 1200px){
   .container.navbar{
     display: none;
